gaalet/src/main/java/de/gaalop/gaalet/antlr/GaaletParser.java
// $ANTLR 3.2 Sep 23, 2009 12:02:23 GaaletParser.g 2010-12-19 07:56:27

  package de.gaalop.gaalet.antlr;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;
import java.util.Map;
import java.util.HashMap;

import org.antlr.runtime.tree.*;

public class GaaletParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "DECIMAL_LITERAL", "HEX_PREFIX", "DIGIT", "HEX", "RANGE_LITERAL", "OUTPUT_LITERAL", "UNROLL_LITERAL", "COUNT_LITERAL", "IGNORE_LITERAL", "LOOP", "BREAK", "GEALG_MV", "GEALG_TYPE", "DOUBLE", "FLOAT", "INTEGER", "UNSIGNED", "SIGNED", "AUTO", "EVAL", "INVERSE", "MINUS", "EXPONENT", "FLOATTYPESUFFIX", "OPNS", "IPNS", "IF", "ELSE", "IDENTIFIER_RECURSIVE", "IDENTIFIER", "LETTER", "DOT", "DOUBLE_COLON", "ARROW_RIGHT", "LSBRACKET", "RSBRACKET", "LBRACKET", "RBRACKET", "IDENTIFIER_TYPE_CAST", "FLOATING_POINT_LITERAL", "SPACE", "WS", "COMMA", "PLUS", "STAR", "SLASH", "MODULO", "CLBRACKET", "CRBRACKET", "REVERSE", "NOT", "DOUBLE_NOT", "SEMICOLON", "WEDGE", "QUESTIONMARK", "COLON", "DOUBLE_BAR", "DOUBLE_AND", "SINGLE_AND", "DOUBLE_EQUALS", "EQUALS", "UNEQUAL", "LESS", "GREATER", "LESS_OR_EQUAL", "GREATER_OR_EQUAL", "SET_OUTPUT", "COMMENT", "PRAGMA", "LINE_COMMENT", "FUNCTION", "PROCEDURE", "NEGATION", "LOGICAL_NEGATION", "DUAL", "BLOCK", "ELSEIF", "DEFINE_V", "DEFINE_ASSIGNMENT", "DEFINE_MV", "DEFINE_MV_AND_ASSIGN", "DEFINE_GEALG", "BLADE", "BLADE_ASSIGN", "MACRO", "ARGUMENT", "RETURN", "ARG_LIST_SEP", "ARGUMENT_PREFIX"
    };
    public static final int FUNCTION=74;
    public static final int ARROW_RIGHT=37;
    public static final int EXPONENT=26;
    public static final int SIGNED=21;
    public static final int STAR=48;
    public static final int LETTER=34;
    public static final int DOUBLE_EQUALS=63;
    public static final int HEX_PREFIX=5;
    public static final int EQUALS=64;
    public static final int NOT=54;
    public static final int EOF=-1;
    public static final int BREAK=14;
    public static final int DOUBLE_NOT=55;
    public static final int LBRACKET=40;
    public static final int GREATER=67;
    public static final int FLOATING_POINT_LITERAL=43;
    public static final int GEALG_MV=15;
    public static final int LOOP=13;
    public static final int LESS=66;
    public static final int RETURN=90;
    public static final int DOUBLE=17;
    public static final int COMMENT=71;
    public static final int SET_OUTPUT=70;
    public static final int DUAL=78;
    public static final int LINE_COMMENT=73;
    public static final int ELSE=31;
    public static final int SEMICOLON=56;
    public static final int DOUBLE_AND=61;
    public static final int LSBRACKET=38;
    public static final int INVERSE=24;
    public static final int WS=45;
    public static final int EVAL=23;
    public static final int RANGE_LITERAL=8;
    public static final int DOUBLE_COLON=36;
    public static final int GEALG_TYPE=16;
    public static final int DEFINE_V=81;
    public static final int OUTPUT_LITERAL=9;
    public static final int BLADE=86;
    public static final int REVERSE=53;
    public static final int DECIMAL_LITERAL=4;
    public static final int SINGLE_AND=62;
    public static final int DEFINE_ASSIGNMENT=82;
    public static final int DOUBLE_BAR=60;
    public static final int GREATER_OR_EQUAL=69;
    public static final int PRAGMA=72;
    public static final int FLOAT=18;
    public static final int ARGUMENT_PREFIX=92;
    public static final int IDENTIFIER_TYPE_CAST=42;
    public static final int SPACE=44;
    public static final int IF=30;
    public static final int FLOATTYPESUFFIX=27;
    public static final int CRBRACKET=52;
    public static final int SLASH=49;
    public static final int LOGICAL_NEGATION=77;
    public static final int IDENTIFIER_RECURSIVE=32;
    public static final int RSBRACKET=39;
    public static final int HEX=7;
    public static final int COMMA=46;
    public static final int IDENTIFIER=33;
    public static final int QUESTIONMARK=58;
    public static final int ARGUMENT=89;
    public static final int AUTO=22;
    public static final int DEFINE_MV=83;
    public static final int DEFINE_GEALG=85;
    public static final int PLUS=47;
    public static final int UNROLL_LITERAL=10;
    public static final int IPNS=29;
    public static final int DIGIT=6;
    public static final int RBRACKET=41;
    public static final int DOT=35;
    public static final int CLBRACKET=51;
    public static final int ARG_LIST_SEP=91;
    public static final int INTEGER=19;
    public static final int MODULO=50;
    public static final int DEFINE_MV_AND_ASSIGN=84;
    public static final int LESS_OR_EQUAL=68;
    public static final int MINUS=25;
    public static final int BLADE_ASSIGN=87;
    public static final int PROCEDURE=75;
    public static final int OPNS=28;
    public static final int UNEQUAL=65;
    public static final int ELSEIF=80;
    public static final int COLON=59;
    public static final int WEDGE=57;
    public static final int UNSIGNED=20;
    public static final int NEGATION=76;
    public static final int COUNT_LITERAL=11;
    public static final int BLOCK=79;
    public static final int MACRO=88;
    public static final int IGNORE_LITERAL=12;

    // delegates
    // delegators


        public GaaletParser(TokenStream input) {
            this(input, new RecognizerSharedState());
        }
        public GaaletParser(TokenStream input, RecognizerSharedState state) {
            super(input, state);
            this.state.ruleMemo = new HashMap[101+1];
             
             
        }
        
    protected TreeAdaptor adaptor = new CommonTreeAdaptor();

    public void setTreeAdaptor(TreeAdaptor adaptor) {
        this.adaptor = adaptor;
    }
    public TreeAdaptor getTreeAdaptor() {
        return adaptor;
    }

    public String[] getTokenNames() { return GaaletParser.tokenNames; }
    public String getGrammarFileName() { return "GaaletParser.g"; }


        private List<String> errors = new ArrayList<String>();
        public void displayRecognitionError(String[] tokenNames,
                                            RecognitionException e) {
            String hdr = getErrorHeader(e);
            String msg = getErrorMessage(e, tokenNames);
            errors.add(hdr + " " + msg);
        }
        public List<String> getErrors() {
            return errors;
        }


    public static class script_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "script"
    // GaaletParser.g:55:1: script : ( statement )* EOF ;
    public final GaaletParser.script_return script() throws RecognitionException {
        GaaletParser.script_return retval = new GaaletParser.script_return();
        retval.start = input.LT(1);
        int script_StartIndex = input.index();
        Object root_0 = null;

        Token EOF2=null;
        GaaletParser.statement_return statement1 = null;


        Object EOF2_tree=null;

        try {
            if ( state.backtracking>0 && alreadyParsedRule(input, 1) ) { return retval; }
            // GaaletParser.g:55:9: ( ( statement )* EOF )
            // GaaletParser.g:56:3: ( statement )* EOF
            {
            root_0 = (Object)adaptor.nil();

            // GaaletParser.g:56:3: ( statement )*
            loop1:
            do {
                int alt1=2;
                int LA1_0 = input.LA(1);

                if ( (LA1_0==DECIMAL_LITERAL||(LA1_0>=LOOP && LA1_0<=GEALG_MV)||(LA1_0>=DOUBLE && LA1_0<=MINUS)||LA1_0==IF||LA1_0==IDENTIFIER||LA1_0==LBRACKET||LA1_0==FLOATING_POINT_LITERAL||LA1_0==CLBRACKET||(LA1_0>=REVERSE && LA1_0<=NOT)||LA1_0==SEMICOLON||LA1_0==SET_OUTPUT||LA1_0==PRAGMA||LA1_0==ARGUMENT_PREFIX) ) {
                    alt1=1;
                }


                switch (alt1) {
            	case 1 :
            	    // GaaletParser.g:0:0: statement
            	    {
            	    pushFollow(FOLLOW_statement_in_script172);
            	    statement1=statement();

            	    state._fsp--;
            	    if (state.failed) return retval;
            	    if ( state.backtracking==0 ) adaptor.addChild(root_0, statement1.getTree());

            	    }
            	    break;

            	default :
            	    break loop1;
                }
            } while (true);

            EOF2=(Token)match(input,EOF,FOLLOW_EOF_in_script175); if (state.failed) return retval;

            }

            retval.stop = input.LT(-1);

            if ( state.backtracking==0 ) {

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
            if ( state.backtracking>0 ) { memoize(input, 1, script_StartIndex); }
        }
        return retval;
    }
    // $ANTLR end "script"

    public static class float_literal_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "float_literal"
    // GaaletParser.g:59:1: float_literal : ( MINUS )? FLOATING_POINT_LITERAL ;
    public final GaaletParser.float_literal_return float_literal() throws RecognitionException {
        GaaletParser.float_literal_return retval = new GaaletParser.float_literal_return();
        retval.start = input.LT(1);
        int float_literal_StartIndex = input.index();
        Object root_0 = null;

        Token MINUS3=null;
        Token FLOATING_POINT_LITERAL4=null;

        Object MINUS3_tree=null;
        Object FLOATING_POINT_LITERAL4_tree=null;

        try {
            if ( state.backtracking>0 && alreadyParsedRule(input, 2) ) { return retval; }
            // GaaletParser.g:59:14: ( ( MINUS )? FLOATING_POINT_LITERAL )
            // GaaletParser.g:60:3: ( MINUS )? FLOATING_POINT_LITERAL
            {
            root_0 = (Object)adaptor.nil();

            // GaaletParser.g:60:3: ( MINUS )?
            int alt2=2;
            int LA2_0 = input.LA(1);

            if ( (LA2_0==MINUS) ) {
                alt2=1;
            }
            switch (alt2) {
                case 1 :
                    // GaaletParser.g:0:0: MINUS
                    {
                    MINUS3=(Token)match(input,MINUS,FOLLOW_MINUS_in_float_literal189); if (state.failed) return retval;
                    if ( state.backtracking==0 ) {
                    MINUS3_tree = (Object)adaptor.create(MINUS3);
                    adaptor.addChild(root_0, MINUS3_tree);
                    }

                    }
                    break;

            }

            FLOATING_POINT_LITERAL4=(Token)match(input,FLOATING_POINT_LITERAL,FOLLOW_FLOATING_POINT_LITERAL_in_float_literal192); if (state.failed) return retval;
            if ( state.backtracking==0 ) {
            FLOATING_POINT_LITERAL4_tree = (Object)adaptor.create(FLOATING_POINT_LITERAL4);
            adaptor.addChild(root_0, FLOATING_POINT_LITERAL4_tree);
            }

            }

            retval.stop = input.LT(-1);

            if ( state.backtracking==0 ) {

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
            if ( state.backtracking>0 ) { memoize(input, 2, float_literal_StartIndex); }
        }
        return retval;
    }
    // $ANTLR end "float_literal"

    public static class pragma_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "pragma"
    // GaaletParser.g:66:1: pragma : ( PRAGMA RANGE_LITERAL float_literal LESS_OR_EQUAL IDENTIFIER LESS_OR_EQUAL float_literal | PRAGMA OUTPUT_LITERAL IDENTIFIER | PRAGMA IGNORE_LITERAL IDENTIFIER );
    public final GaaletParser.pragma_return pragma() throws RecognitionException {
        GaaletParser.pragma_return retval = new GaaletParser.pragma_return();
        retval.start = input.LT(1);
        int pragma_StartIndex = input.index();
        Object root_0 = null;

        Token PRAGMA5=null;
        Token RANGE_LITERAL6=null;
        Token LESS_OR_EQUAL8=null;
        Token IDENTIFIER9=null;
        Token LESS_OR_EQUAL10=null;
        Token PRAGMA12=null;
        Token OUTPUT_LITERAL13=null;
        Token IDENTIFIER14=null;
        Token PRAGMA15=null;
        Token IGNORE_LITERAL16=null;
        Token IDENTIFIER17=null;
        GaaletParser.float_literal_return float_literal7 = null;

        GaaletParser.float_literal_return float_literal11 = null;


        Object PRAGMA5_tree=null;
        Object RANGE_LITERAL6_tree=null;
        Object LESS_OR_EQUAL8_tree=null;
        Object IDENTIFIER9_tree=null;
        Object LESS_OR_EQUAL10_tree=null;
        Object PRAGMA12_tree=null;
        Object OUTPUT_LITERAL13_tree=null;
        Object IDENTIFIER14_tree=null;
        Object PRAGMA15_tree=null;
        Object IGNORE_LITERAL16_tree=null;
        Object IDENTIFIER17_tree=null;

        try {
            if ( state.backtracking>0 && alreadyParsedRule(input, 3) ) { return retval; }
            // GaaletParser.g:67:3: ( PRAGMA RANGE_LITERAL float_literal LESS_OR_EQUAL IDENTIFIER LESS_OR_EQUAL float_literal | PRAGMA OUTPUT_LITERAL IDENTIFIER | PRAGMA IGNORE_LITERAL IDENTIFIER )
            int alt3=3;
            int LA3_0 = input.LA(1);

            if ( (LA3_0==PRAGMA) ) {
                switch ( input.LA(2) ) {
                case RANGE_LITERAL:
                    {
                    alt3=1;
                    }
                    break;
                case OUTPUT_LITERAL:
                    {
                    alt3=2;
                    }
                    break;
                case IGNORE_LITERAL:
                    {
                    alt3=3;
                    }
                    break;
                default:
                    if (state.backtracking>0) {state.failed=true; return retval;}
                    NoViableAltException nvae =
                        new NoViableAltException("", 3, 1, input);

                    throw nvae;
                }

            }
            else {
                if (state.backtracking>0) {state.failed=true; return retval;}
                NoViableAltException nvae =
                    new NoViableAltException("", 3, 0, input);

                throw nvae;
            }
            switch (alt3) {
                case 1 :
                    // GaaletParser.g:67:5: PRAGMA RANGE_LITERAL float_literal LESS_OR_EQUAL IDENTIFIER LESS_OR_EQUAL float_literal
                    {
                    root_0 = (Object)adaptor.nil();

                    PRAGMA5=(Token)match(input,PRAGMA,FOLLOW_PRAGMA_in_pragma207); if (state.failed) return retval;
                    if ( state.backtracking==0 ) {
                    PRAGMA5_tree = (Object)adaptor.create(PRAGMA5);
                    adaptor.addChild(root_0, PRAGMA5_tree);
                    }
                    RANGE_LITERAL6=(Token)match(input,RANGE_LITERAL,FOLLOW_RANGE_LITERAL_in_pragma209); if (state.failed) return retval;
                    if ( state.backtracking==0 ) {
                    RANGE_LITERAL6_tree = (Object)adaptor.create(RANGE_LITERAL6);
                    adaptor.addChild(root_0, RANGE_LITERAL6_tree);
                    }
                    pushFollow(FOLLOW_float_literal_in_pragma211);
                    float_literal7=float_literal();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) adaptor.addChild(root_0, float_literal7.getTree());
                    LESS_OR_EQUAL8=(Token)match(input,LESS_OR_EQUAL,FOLLOW_LESS_OR_EQUAL_in_pragma213); if (state.failed) return retval;
                    if ( state.backtracking==0 ) {
                    LESS_OR_EQUAL8_tree = (Object)adaptor.create(LESS_OR_EQUAL8);
                    adaptor.addChild(root_0, LESS_OR_EQUAL8_tree);
                    }
                    IDENTIFIER9=(Token)match(input,IDENTIFIER,FOLLOW_IDENTIFIER_in_pragma215); if (state.failed) return retval;
                    if ( state.backtracking==0 ) {
                    IDENTIFIER9_tree = (Object)adaptor.create(IDENTIFIER9);
                    adaptor.addChild(root_0, IDENTIFIER9_tree);
                    }
                    LESS_OR_EQUAL10=(Token)match(input,LESS_OR_EQUAL,FOLLOW_LESS_OR_EQUAL_in_pragma217); if (state.failed) return retval;
                    if ( state.backtracking==0 ) {
                    LESS_OR_EQUAL10_tree = (Object)adaptor.create(LESS_OR_EQUAL10);
                    adaptor.addChild(root_0, LESS_OR_EQUAL10_tree);
                    }
                    pushFollow(FOLLOW_float_literal_in_pragma219);
                    float_literal11=float_literal();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) adaptor.addChild(root_0, float_literal11.getTree());

                    }
                    break;
                case 2 :
                    // GaaletParser.g:68:5: PRAGMA OUTPUT_LITERAL IDENTIFIER
                    {
                    root_0 = (Object)adaptor.nil();

                    PRAGMA12=(Token)match(input,PRAGMA,FOLLOW_PRAGMA_in_pragma225); if (state.failed) return retval;
                    if ( state.backtracking==0 ) {
                    PRAGMA12_tree = (Object)adaptor.create(PRAGMA12);
                    adaptor.addChild(root_0, PRAGMA12_tree);
                    }
                    OUTPUT_LITERAL13=(Token)match(input,OUTPUT_LITERAL,FOLLOW_OUTPUT_LITERAL_in_pragma227); if (state.failed) return retval;
                    if ( state.backtracking==0 ) {
                    OUTPUT_LITERAL13_tree = (Object)adaptor.create(OUTPUT_LITERAL13);
                    adaptor.addChild(root_0, OUTPUT_LITERAL13_tree);
                    }
                    IDENTIFIER14=(Token)match(input,IDENTIFIER,FOLLOW_IDENTIFIER_in_pragma229); if (state.failed) return retval;
                    if ( state.backtracking==0 ) {
                    IDENTIFIER14_tree = (Object)adaptor.create(IDENTIFIER14);
                    adaptor.addChild(root_0, IDENTIFIER14_tree);
                    }

                    }
                    break;
                case 3 :
                    // GaaletParser.g:69:5: PRAGMA IGNORE_LITERAL IDENTIFIER
                    {
                    root_0 = (Object)adaptor.nil();

                    PRAGMA15=(Token)match(input,PRAGMA,FOLLOW_PRAGMA_in_pragma235); if (state.failed) return retval;
                    if ( state.backtracking==0 ) {
                    PRAGMA15_tree = (Object)adaptor.create(PRAGMA15);
                    adaptor.addChild(root_0, PRAGMA15_tree);
                    }
                    IGNORE_LITERAL16=(Token)match(input,IGNORE_LITERAL,FOLLOW_IGNORE_LITERAL_in_pragma237); if (state.failed) return retval;
                    if ( state.backtracking==0 ) {
                    IGNORE_LITERAL16_tree = (Object)adaptor.create(IGNORE_LITERAL16);
                    adaptor.addChild(root_0, IGNORE_LITERAL16_tree);
                    }
                    IDENTIFIER17=(Token)match(input,IDENTIFIER,FOLLOW_IDENTIFIER_in_pragma239); if (state.failed) return retval;
                    if ( state.backtracking==0 ) {
                    IDENTIFIER17_tree = (Object)adaptor.create(IDENTIFIER17);
                    adaptor.addChild(root_0, IDENTIFIER17_tree);
                    }

                    }
                    break;

            }
            retval.stop = input.LT(-1);

            if ( state.backtracking==0 ) {

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
            if ( state.backtracking>0 ) { memoize(input, 3, pragma_StartIndex); }
        }
        return retval;
    }
    // $ANTLR end "pragma"

    public static class expression_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "expression"
    // GaaletParser.g:75:1: expression : ( type lvalue EQUALS expression -> ^( DEFINE_ASSIGNMENT lvalue expression ) | type lvalue -> ^( DEFINE_V lvalue ) | lvalue EQUALS expression -> ^( EQUALS lvalue expression ) | logical_or_expression | eval );
    public final GaaletParser.expression_return expression() throws RecognitionException {
        GaaletParser.expression_return retval = new GaaletParser.expression_return();
        retval.start = input.LT(1);
        int expression_StartIndex = input.index();
        Object root_0 = null;

        Token EQUALS20=null;
        Token EQUALS25=null;
        GaaletParser.type_return type18 = null;

        GaaletParser.lvalue_return lvalue19 = null;

        GaaletParser.expression_return expression21 = null;

        GaaletParser.type_return type22 = null;

        GaaletParser.lvalue_return lvalue23 = null;

        GaaletParser.lvalue_return lvalue24 = null;

        GaaletParser.expression_return expression26 = null;

        GaaletParser.logical_or_expression_return logical_or_expression27 = null;

        GaaletParser.eval_return eval28 = null;


        Object EQUALS20_tree=null;
        Object EQUALS25_tree=null;
        RewriteRuleTokenStream stream_EQUALS=new RewriteRuleTokenStream(adaptor,"token EQUALS");
        RewriteRuleSubtreeStream stream_expression=new RewriteRuleSubtreeStream(adaptor,"rule expression");
        RewriteRuleSubtreeStream stream_lvalue=new RewriteRuleSubtreeStream(adaptor,"rule lvalue");
        RewriteRuleSubtreeStream stream_type=new RewriteRuleSubtreeStream(adaptor,"rule type");
        try {
            if ( state.backtracking>0 && alreadyParsedRule(input, 4) ) { return retval; }
            // GaaletParser.g:76:3: ( type lvalue EQUALS expression -> ^( DEFINE_ASSIGNMENT lvalue expression ) | type lvalue -> ^( DEFINE_V lvalue ) | lvalue EQUALS expression -> ^( EQUALS lvalue expression ) | logical_or_expression | eval )
            int alt4=5;
            alt4 = dfa4.predict(input);
            switch (alt4) {
                case 1 :
                    // GaaletParser.g:77:5: type lvalue EQUALS expression
                    {
                    pushFollow(FOLLOW_type_in_expression258);
                    type18=type();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) stream_type.add(type18.getTree());
                    pushFollow(FOLLOW_lvalue_in_expression260);
                    lvalue19=lvalue();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) stream_lvalue.add(lvalue19.getTree());
                    EQUALS20=(Token)match(input,EQUALS,FOLLOW_EQUALS_in_expression262); if (state.failed) return retval; 
                    if ( state.backtracking==0 ) stream_EQUALS.add(EQUALS20);

                    pushFollow(FOLLOW_expression_in_expression264);
                    expression21=expression();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) stream_expression.add(expression21.getTree());


                    // AST REWRITE
                    // elements: lvalue, expression
                    // token labels: 
                    // rule labels: retval
                    // token list labels: 
                    // rule list labels: 
                    // wildcard labels: 
                    if ( state.backtracking==0 ) {
                    retval.tree = root_0;
                    RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

                    root_0 = (Object)adaptor.nil();
                    // 77:36: -> ^( DEFINE_ASSIGNMENT lvalue expression )
                    {
                        // GaaletParser.g:77:39: ^( DEFINE_ASSIGNMENT lvalue expression )
                        {
                        Object root_1 = (Object)adaptor.nil();
                        root_1 = (Object)adaptor.becomeRoot((Object)adaptor.create(DEFINE_ASSIGNMENT, "DEFINE_ASSIGNMENT"), root_1);

                        adaptor.addChild(root_1, stream_lvalue.nextTree());
                        adaptor.addChild(root_1, stream_expression.nextTree());

                        adaptor.addChild(root_0, root_1);
                        }

                    }

                    retval.tree = root_0;}
                    }
                    break;
                case 2 :
                    // GaaletParser.g:78:5: type lvalue
                    {
                    pushFollow(FOLLOW_type_in_expression282);
                    type22=type();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) stream_type.add(type22.getTree());
                    pushFollow(FOLLOW_lvalue_in_expression284);
                    lvalue23=lvalue();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) stream_lvalue.add(lvalue23.getTree());


                    // AST REWRITE
                    // elements: lvalue
                    // token labels: 
                    // rule labels: retval
                    // token list labels: 
                    // rule list labels: 
                    // wildcard labels: 
                    if ( state.backtracking==0 ) {
                    retval.tree = root_0;
                    RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

                    root_0 = (Object)adaptor.nil();
                    // 78:17: -> ^( DEFINE_V lvalue )
                    {
                        // GaaletParser.g:78:20: ^( DEFINE_V lvalue )
                        {
                        Object root_1 = (Object)adaptor.nil();
                        root_1 = (Object)adaptor.becomeRoot((Object)adaptor.create(DEFINE_V, "DEFINE_V"), root_1);

                        adaptor.addChild(root_1, stream_lvalue.nextTree());

                        adaptor.addChild(root_0, root_1);
                        }

                    }

                    retval.tree = root_0;}
                    }
                    break;
                case 3 :
                    // GaaletParser.g:79:5: lvalue EQUALS expression
                    {
                    pushFollow(FOLLOW_lvalue_in_expression298);
                    lvalue24=lvalue();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) stream_lvalue.add(lvalue24.getTree());
                    EQUALS25=(Token)match(input,EQUALS,FOLLOW_EQUALS_in_expression300); if (state.failed) return retval; 
                    if ( state.backtracking==0 ) stream_EQUALS.add(EQUALS25);

                    pushFollow(FOLLOW_expression_in_expression302);
                    expression26=expression();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) stream_expression.add(expression26.getTree());

